--- a/index.css
+++ b/index.css
@@ -1,13 +1,13 @@
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400, 600);
 body {
   background-color: black;
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
-h3{
+h3 {
   color: white;
   text-align: center;
 }
-.button{
+.button {
   background: red;
   width: 250px;
   padding: 15px;
@@ -18,12 +18,13 @@ h3{
   display: inline-block;
   cursor: pointer;
 }
-.albums{
+.albums {
   width: 95%;
   margin: 0 auto;
+  float: left;
   /*overflow: auto;*/
 }
-.album{
+.album {
   max-width: 20%;
   background: #fff;
   padding: 15px;
@@ -32,22 +33,24 @@ h3{
   box-sizing: border-box;
   margin: 15px 2.5%;
   cursor: pointer;
+  white-space: nowrap;
 }
-.album.selected{
-  -webkit-box-shadow: 0px 0px 161px -5px rgba(48,131,255,1);
-  -moz-box-shadow: 0px 0px 161px -5px rgba(48,131,255,1);
-   box-shadow: 0px 0px 161px -5px rgba(48,131,255,1);
+
+.album.selected {
+  -webkit-box-shadow: 0px 0px 161px -5px rgba(48, 131, 255, 1);
+  -moz-box-shadow: 0px 0px 161px -5px rgba(48, 131, 255, 1);
+  box-shadow: 0px 0px 161px -5px rgba(48, 131, 255, 1);
 }
-.album img{
+.album img {
   width: 100%;
 }
-.album .title{
+.album .title {
   font-size: 18px;
   font-weight: 600;
   text-transform: capitalize;
   text-align: center;
 }
-.album .artist{
+.album .artist {
   font-size: 10px;
   font-weight: 100;
   text-transform: uppercase;
@@ -70,10 +73,9 @@ h3{
   margin: 10px 0;
   display: none;
 }
-.notify.active{
+.notify.active {
   display: block;
 }
-
 
 .notify:first-child {
   margin: 0 0 10px 0;
@@ -144,4 +146,34 @@ h3{
   color: #545454;
   text-decoration: none;
   font-weight: 600;
+}
+
+@media screen and (max-width: 1100px) {
+  .album .title {
+    font-size: 14px; /*18*/
+  }
+  .album .artist {
+    font-size: 7px; /*10*/
+  }
+}
+
+@media screen and (max-width: 874px) {
+  .album .title {
+    font-size: 12px; /*18*/
+  }
+  .album .artist {
+    font-size: 5px; /*10*/
+  }
+}
+
+@media screen and (max-width: 720px) {
+  .album .title {
+    font-size: 10px; /*18*/
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .album .title {
+    font-size: 5.5px; /*18*/
+  }
 }
